@@ -1,7 +1,8 @@
 package io.agrest.parser.converter;
 
 import javax.ws.rs.core.Response.Status;
-import javax.xml.bind.DatatypeConverter;
+
+import java.util.Base64;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import io.agrest.AgException;
@@ -21,8 +22,7 @@ public class Base64Converter extends AbstractConverter<byte[]> {
 			throw new AgException(Status.BAD_REQUEST, "Expected textual value, got: " + node.asText());
 		}
 		try {
-			// TODO: replace with Base64.Decoder when we upgrade to java 8
-			return DatatypeConverter.parseBase64Binary(node.asText());
+			return Base64.getDecoder().decode(node.asText());
 		} catch (IllegalArgumentException e) {
 			throw new AgException(Status.BAD_REQUEST, "Failed to decode Base64 value: " + node.asText(), e);
 		}
